--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                             Mini Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item hovr" href="#miniProjects">Analog Clock</a></li>
-                            <li><a class="dropdown-item hovr" href="#miniProjects">Digital Clock</a></li>
-                            <li><a class="dropdown-item hovr" href="#miniProjects">Calculator</a></li>
                             <li><a class="dropdown-item hovr" href="#miniProjects">Tic Tac Toe game</a></li>
                             <li><a class="dropdown-item hovr" href="#miniProjects">Public Lbrary</a></li>
                             <li><a class="dropdown-item hovr" href="#miniProjects">ElectroForce</a></li>
+                            <li><a class="dropdown-item hovr" href="#miniProjects">Analog Clock</a></li>
+                            <li><a class="dropdown-item hovr" href="#miniProjects">Digital Clock</a></li>
+                            <li><a class="dropdown-item hovr" href="#miniProjects">Calculator</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown mx-2">
@@ -82,17 +82,16 @@
     <div class="container1 card mb-3">
         <div class="row g-0">
             <div class="col-lg-6 col-md-6 col-sm-12">
-                <div class="card-body my-5 mx-5 float-md-start">
-                    <h5 class="card-title text-light mx-5 fs-1 fontFam" style="font-size: 5vw !important; ">Hello,</h5>
-                    <p class="card-text text-light mx-5 fs-2 fontFam" style="font-size: 4vw !important; ">
+                <div class="card-body my-5 float-md-start">
+                    <h5 class="card-title text-light mx-3 fs-1 fontFam" style="font-size: 3rem !important; ">Hello,</h5>
+                    <p class="card-text text-light mx-3 fs-2 fontFam" style="font-size: 3rem !important; ">
                         My name is</p>
-                    <p class="card-text text-light mx-5 fs-1 fontFam" style="font-size: 5vw !important; ">
+                    <p class="card-text text-light mx-3 fs-1 fontFam" style="font-size: 3rem !important; ">
                         Sartaj Alam</p>
-                    <p><small class="text-light mx-5 fs-1 fontFam" style="font-size: 2vw !important;">I'm
-                            a Front End Web
-                            Developer</small></p>
-                    <a class=" btn btn-outline-danger mx-5 fontFam" style="font-size: 2vw !important;"
-                        href="#miniProjects" role="button">Portfolio</a>
+                    <p><small class="text-light mx-3 fontFam" style="font-size: 1rem !important;">I'm
+                            a Front End Web Developer</small></p>
+                    <a class=" btn btn-outline-danger mx-3 fontFam" style="font-size: 2rem !important;" href="#aboutMe"
+                        role="button">Portfolio</a>
                 </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-12">
@@ -273,7 +272,7 @@
             <img src="https://source.unsplash.com/500x250/?calculator" class="card-img-top rounded-pill"
                 title="Digital Calculator" alt="Error">
             <div class="card-body">
-                <h5 class="card-title">Digital Calculator</h5>
+                <h5 class="card-title">Calculator</h5>
                 <p class="card-text">
                     <a href="https://github.com/sak03/Calculator" target="blank">GitHub repositorie link >></a>
                 </p>
@@ -392,11 +391,10 @@
             <img src="https://source.unsplash.com/500x300/?font,text,word" class="img-fluid rounded" alt="...">
         </div>
     </div>
+    <a name="aboutMe"></a>
     <hr style="color: gray">
 
     <!-- code of about me  -->
-    <a name="aboutMe"></a>
-
     <div class="row mx-2">
         <h2 class="card-title">About Me</h2>
         <div class="col-sm-12 col-md-3 col-lg-3">
@@ -407,12 +405,16 @@
                 <strong>I'm a Front End Web Developer.</strong>
                 <p class="card-text text-justify">
                     My portfolio represents everything that I've learned and accomplished as
-                    a science and engineering student. <br> 
-                    I develop web applications and websites for small businesses. While I'm based in New Delhi, India. I help to build web applications and websites for people all over the world. <br> 
-                    I love designing websites and functionalities of web applications, I'm looking for more opportunities to work in coding. It's motivate me towards the world of coding. <br>
-                    Currently I'm working at 
-                    <a href="https://www.mityung.com/" target="_blank">Mityung Infotech (p) Ltd.</a> as frontend web developer. <br/>
-                    I did M.Tech(EE) in Power System and Drives from ZHCET, AMU, Aligarh and B.Tech in Electrical Engineering from JMI, New Delhi.
+                    a science and engineering student. <br>
+                    I develop web applications and websites for small businesses. While I'm based in New Delhi, India. I
+                    help to build web applications and websites for people all over the world. <br>
+                    I love designing websites and functionalities of web applications, I'm looking for more
+                    opportunities to work in coding. It's motivate me towards the world of coding. <br>
+                    Currently I'm working at
+                    <a href="https://www.mityung.com/" target="_blank">Mityung Infotech (p) Ltd.</a> as frontend web
+                    developer. <br />
+                    I did M.Tech(EE) in Power System and Drives from ZHCET, AMU, Aligarh and B.Tech in Electrical
+                    Engineering from JMI, New Delhi.
                 </p>
                 <a class="btn btn-outline-info mx-5"
                     href="https://drive.google.com/file/d/1xCem-OI2QQcdxN8S_JZe2MItXlAxCHOQ/view?usp=sharing"
@@ -427,92 +429,80 @@
     <h1 class="mx-3 my-4">Contact Info</h1>
     <div class="row mx-2">
         <div class="col-sm-12 col-md-4 col-lg-4">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0 conct">
-                    <div class="col-md-4">
-                        <img src="images/phone_logo.png" class="img-fluid rounded-start" alt="Error">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <p class="card-text">+91-9958564890</p>
-                            <p class="card-text">+91-8512002184</p>
-                        </div>
-                    </div>
+            <div class="d-flex conct justify-content-between my-2 rounded">
+                <div class="">
+                    <img src="images/phone_logo.png" class="img-fluid" alt="Error">
+                </div>
+                <div class="my-2 mx-2">
+                    <p class="card-text">+91-9958564890</p>
+                    <p class="card-text">+91-8512002184</p>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-4">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0 conct">
-                    <div class="col-md-3">
-                        <img src="images/email_logo.png" class="img-fluid rounded-start" alt="Error">
-                    </div>
-                    <div class="col-md-9">
-                        <div class="card-body">
-                            <p class="card-text">sartaj2394@gmail.com</p>
-                            <p class="card-text"> im.master.023@gmail.com</p>
-                        </div>
-                    </div>
+            <div class="d-flex conct justify-content-between my-2 rounded">
+                <div class="">
+                    <img src="images/email_logo.png" class="img-fluid" alt="Error">
+                </div>
+                <div class="my-2 mx-2">
+                    <p class="card-text">sartaj2394@gmail.com</p>
+                    <p class="card-text"> im.master.023@gmail.com</p>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-4">
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0 conct">
-                    <div class="col-md-4">
-                        <img src="images/map-marker_logo.png" class="img-fluid rounded-start" alt="Error">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <p class="card-text">Jamia Nagar, Okhla,</p>
-                            <p class="card-text">New Delhi, India</p>
-                        </div>
-                    </div>
+            <div class="d-flex conct justify-content-between my-2 rounded">
+                <div class="">
+                    <img src="images/map-marker_logo.png" class="img-fluid" alt="Error">
+                </div>
+                <div class="my-2 mx-2">
+                    <p class="card-text">Jafrabad,</p>
+                    <p class="card-text">Delhi, India</p>
                 </div>
             </div>
         </div>
     </div>
+    </div>
+    </div>
 
     <!-- footer details -->
     <footer class="bg-dark Text-white foot">
-        <div class="container text-center text-md-start bg-dark foot">
-            <div class="row justify-content-between">
+        <div class="row align-items-center justify-content-between mx-2">
 
-                <div class="col-md-4 col-lg-4 mt-3 w-auto">
-                    <h5 class="mb-1 text-white hovr"> SARTAJ ALAM</h5>
-                    <small class="mb-1 text-white">Your Complete Web Solution</small>
-                </div>
+            <div class="col-md-4 col-lg-4 mt-3 w-auto">
+                <h5 class="mb-1 text-white hovr"> SARTAJ ALAM</h5>
+                <small class="mb-1 text-white">Your Complete Web Solution</small>
+            </div>
 
-                <div class="col-md-4 col-lg-4 col-xl-3 mt-3 w-auto">
-                    <h5 class="mb-1 text-white text-warning hovr"> Expert In</h5>
-                    <small> <a href="#skills" class="text-white hovr" style="text-decoration:none">Front End Web
-                            Development</a>
-                    </small>
-                </div>
+            <div class="col-md-4 col-lg-4 col-xl-3 mt-3 w-auto">
+                <h5 class="mb-1 text-white text-warning hovr"> Expert In</h5>
+                <small> <a href="#skills" class="text-white hovr" style="text-decoration:none">Front End Web
+                        Development</a>
+                </small>
+            </div>
 
-                <div class="col-md-4 col-lg-4 mt-3 w-auto" style="flex: right;">
-                    <div class="text-center text-md-right">
-                        <h5 class="mb-1 text-center text-white hovr">Follow Me</h5>
-                        <ul class="list-unstyled list-inline">
-                            <li class="list-inline-item"> <a href="https://linkedin.com/in/sartaj-alam-7a520b106"
-                                    class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
-                                    <i class="fab fa-linkedin"></i></a></li>
-                            <li class="list-inline-item"> <a href="https://github.com/sak03"
-                                    class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
-                                    <i class="fab fa-github-square"></i></a></li>
-                            <!-- <li class="list-inline-item"> <a href="https://www.facebook.com/"
+            <div class="col-md-4 col-lg-4 mt-3 w-auto" style="flex: right;">
+                <div class="text-center text-md-right">
+                    <h5 class="mb-1 text-center text-white hovr">Follow Me</h5>
+                    <ul class="list-unstyled list-inline">
+                        <li class="list-inline-item"> <a href="https://linkedin.com/in/sartaj-alam-7a520b106"
+                                class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
+                                <i class="fab fa-linkedin"></i></a></li>
+                        <li class="list-inline-item"> <a href="https://github.com/sak03"
+                                class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
+                                <i class="fab fa-github-square"></i></a></li>
+                        <!-- <li class="list-inline-item"> <a href="https://www.facebook.com/"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
                                     <i class="fab fa-facebook-square"></i></a></li> -->
-                            <li class="list-inline-item"> <a href="https://twitter.com/sartaj_03"
-                                    class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
-                                    <i class="fab fa-twitter"></i></a></li>
-                            <!-- <li class="list-inline-item"> <a href="https://www.instagram.com/"
+                        <li class="list-inline-item"> <a href="https://twitter.com/sartaj_03"
+                                class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
+                                <i class="fab fa-twitter"></i></a></li>
+                        <!-- <li class="list-inline-item"> <a href="https://www.instagram.com/"
                                     class="btn-floating btn-sm text-white hovr" target="blank" style="font-size: 23px;">
                                     <i class="fab fa-instagram"></i></a></li> -->
-                        </ul>
-                    </div>
+                    </ul>
                 </div>
             </div>
         </div>
