react helmet skills admin

--- a/index.html
+++ b/index.html
@@ -142,6 +142,15 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+            <img src="images/reactHelmet.png" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">React Helmet</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
             <img src="images/js.jpg" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">JavaScript</h5>
