--- a/index.html
+++ b/index.html
@@ -2,12 +2,39 @@
 <html lang="en">
 
 <head>
-    <title>sartaj-alam</title>
-    <link rel="icon" class="rounded" href="photo2.jpeg">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title>sartaj alam | web developer</title>
+    <link rel="icon" class="rounded" href="photo2.jpeg">
+
+    <meta name="description"
+        content="I'm a web developer. I developed lots of applications as well as websites.">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://sak03.github.io/sartaj/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="sartaj alam | web developer">
+    <meta property="og:description"
+        content="I'm a web developer. I developed lots of applications as well as websites.">
+    <meta property="og:image" content="photo2.jpeg">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="mityung.com">
+    <meta property="twitter:url" content="https://sak03.github.io/sartaj/">
+    <meta name="twitter:title" content="MITYUNG | Healthtech | Data Analytics | IT Services">
+    <meta name="twitter:description"
+        content="MITYUNG is a leading healthcare IT and data analytics solutions with more than 13 years of experience in providing high-quality services at affordable prices.">
+    <meta name="twitter:image" content="photo2.jpeg">
+
+
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/favicon.png" rel="apple-touch-icon">
+
+    <link rel="canonical" href="https://sak03.github.io/sartaj/" />
+
 
     <!-- Bootstrap CSS v5.0.2 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
