skill star size fixed

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="card-body">
                 <h5 class="card-title">ReactJS</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
@@ -146,7 +146,7 @@
             <div class="card-body">
                 <h5 class="card-title">Redux</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
                 </p>
             </div>
         </div>
@@ -155,7 +155,7 @@
             <div class="card-body">
                 <h5 class="card-title">Axios</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
                 </p>
             </div>
         </div>
@@ -164,7 +164,7 @@
             <div class="card-body">
                 <h5 class="card-title">Git/GitHub</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
                 </p>
             </div>
         </div>
@@ -173,7 +173,7 @@
             <div class="card-body">
                 <h5 class="card-title">React Helmet</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
@@ -182,7 +182,7 @@
             <div class="card-body">
                 <h5 class="card-title">JavaScript</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
@@ -191,7 +191,7 @@
             <div class="card-body">
                 <h5 class="card-title">Bootstrap</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
@@ -200,7 +200,7 @@
             <div class="card-body">
                 <h5 class="card-title">Prime React</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
@@ -209,7 +209,7 @@
             <div class="card-body">
                 <h5 class="card-title">Core UI</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
                 </p>
             </div>
         </div>
@@ -218,7 +218,7 @@
             <div class="card-body">
                 <h5 class="card-title">Material UI</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * *</span> * *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
                 </p>
             </div>
         </div>
@@ -227,7 +227,7 @@
             <div class="card-body">
                 <h5 class="card-title">HTML & CSS</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 5vh;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
